fixing sublink z-index

--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -76,6 +76,7 @@
 .sublink {
 	position: absolute;
 	bottom: var(--large);
+	z-index: 1;
 }
 
 .sublink p:hover {
@@ -110,6 +111,7 @@
 	justify-content: center;
 	align-items: center;
 	gap: var(--small);
+	z-index: 1;
 }
 
 .lights {
